--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </header>
       <div class="landing">
         <video autoplay muted loop class="video_dim" style="z-index: -1;">
-            <source src="../assets/4241615-hd_1920_1080_30fps.mp4" type="">
+            <source src="./Assets/4241615-hd_1920_1080_30fps.mp4" type="video/mp4">
         </video>
         <h1 style="z-index: 2;">Hello</h1>
       </div>
