--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </header>
       <div class="video-container">
         <video autoplay muted loop class="video_dim" >
-            <source src="./Assets/4241615-hd_1920_1080_30fps.mp4" type="">
+            <source src="./4241615-hd_1920_1080_30fps.mp4" type="video/mp4">
         </video>
         <div class="video-text">
           <h1>Welcome to BOOKiT</h1>
